[Test] to solve bug that causes the about me section to be bigger on small screens on the live version of the website

--- a/src/styling/components/_main.scss
+++ b/src/styling/components/_main.scss
@@ -71,11 +71,7 @@ main {
 
     .about-me-container {
         padding: 100px 20px;
-        //background-color: blue;
-
-        .about-me {
-            
-        }
+        background-color: blue;
 
         h2 {
             font-family: 'Inter', sans-serif;
